@@ -34,6 +34,7 @@ const KEY_REPEATER = 5;
 const SNOW_LAYERS = 40;
 const SNOW_SEASON_OFFSET = 5/6;
 const ENV_LAYER_TILE_SIZE = 20;
+const NC_OFFSET_RANDOM_FACTOR = 4096;
 
 const OFF_SEASON_POLAR_TEMP = -3;
 const PEAK_SEASON_POLAR_TEMP = 10;
